--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+/* BASIC */
+/* MODAL */
+/* PROGRESS BAR */
 .landing-cont {
   height: 100vh;
   display: flex;
@@ -184,6 +187,13 @@
   text-align: center;
   font-weight: 700;
 }
+.main-pokemon .rip {
+  position: absolute;
+  font-size: 20px;
+  font-weight: 800;
+  top: 100px;
+  left: 150px;
+}
 .main-pokemon .pokemon-img {
   width: 100px;
   height: 150px;
@@ -216,6 +226,9 @@
   100% {
     transform: translateX(-60vw);
   }
+}
+.main-pokemon .pokemon-dead {
+  transform: translateY(25px) rotate(90deg);
 }
 .main-pokemon .pokemon-stats h3 {
   margin-bottom: 0.5em;
